# api/v1/controllers/product/index.js
@@ -4,7 +4,8 @@ var ResHelper = require(_pathconst.FilesPath.ResHelper);
 var AuthHelper = require(_pathconst.FilesPath.AuthHelper);
 var ProductService = require(_pathconst.ServicesPath.ProductService);
 var ProductValidationV1 = require(_pathconst.ReqModelsPath.ProductValidationV1);
-let bcrypt = require('bcrypt')
+let bcrypt = require('bcrypt');
+const { use } = require("chai");
 
 
 
@@ -93,11 +94,77 @@ const updateProduct = async (req, res, next) => {
         ResHelper.apiResponse(res, false, "Error occured during execution", 500, {}, "");
     }
 }
+
+const bookProduct = async (req, res, next) => {
+    try {
+        const { error } = ProductValidationV1.bookProduct.validate(req.body);
+        if (error) {
+            ResHelper.apiResponse(res, false, error.message, 401, {}, "");
+        } else {
+            let { product_id,quantity} = req.body;
+            let user_id = req.loggedInUser.id;
+            console.log(req.loggedInUser)
+            let userProduct = await ProductService.getUserProduct(user_id,product_id);
+            console.log(userProduct)
+            if(userProduct){
+                ResHelper.apiResponse(res, false, "Product already exists ", 401, {}, "");
+            }
+            let product = await ProductService.getProduct(product_id);
+            if(!product){
+                ResHelper.apiResponse(res, false, "No Such Product Found", 401, {}, "");
+            }else{
+                if(product.quantity<quantity){
+                    ResHelper.apiResponse(res, false, "InSufficient Stock", 401, {}, "");
+                }
+                await ProductService.bookProduct(user_id,product_id,quantity);
+                await ProductService.updateProduct(product.name,product.price,product.quantity-quantity,product.id)
+                ResHelper.apiResponse(res, true, "Success", 201, {}, "");
+            }
+         
+        }
+    }
+    catch (e) {
+        logger.error(e)
+        ResHelper.apiResponse(res, false, "Error occured during execution", 500, {}, "");
+    }
+}
+
+
+const cancelProduct = async (req, res, next) => {
+    try {
+        const { error } = ProductValidationV1.cancelProduct.validate(req.body);
+        if (error) {
+            ResHelper.apiResponse(res, false, error.message, 401, {}, "");
+        } else {
+            let { product_id} = req.body;
+            let user_id = req.loggedInUser.id;
+            let userProduct = await ProductService.getUserProduct(user_id,product_id);
+            if(!userProduct){
+                ResHelper.apiResponse(res, false, "No such user Product already exists ", 401, {}, "");
+            }
+            let product = await ProductService.getProduct(product_id);
+            if(!product){
+                ResHelper.apiResponse(res, false, "No Such Product Found", 401, {}, "");
+            }else{
+                await ProductService.cancelProduct(product_id,user_id);
+                await ProductService.updateProduct(product.name,product.price,product.quantity+userProduct.quantity,product.id)
+                ResHelper.apiResponse(res, true, "Success", 201, {}, "");
+            }
+         
+        }
+    }
+    catch (e) {
+        logger.error(e)
+        ResHelper.apiResponse(res, false, "Error occured during execution", 500, {}, "");
+    }
+}
 module.exports = {
     createProduct,
     getAllProduct,
     updateProduct,
-    deleteProduct
+    deleteProduct,
+    bookProduct,
+    cancelProduct
 };
 
 
